UpgradeNuGetPackageVersion: semver selectors, NuGet source discovery, and test improvements
- Support semver version selectors (latest.release, ~, ^, etc.) via
  NuGetVersionResolver which queries NuGet V3 flat container APIs
- Discover package sources from nuget.config files during csproj parsing
  (C# RPC side walks up from project dir to repo root)
- Surface package sources through MSBuildProject marker and ParseSolutionResult
- Handle property-based version references that resolve across files
  (e.g. Directory.Build.props defining version properties)
- Convert CSharpParseProjectTest to use rewriteRun with csharp()/csproj()
  assertions instead of manual RPC calls where possible
- Add comprehensive test coverage: glob patterns, version ranges, floating
  versions, central package management, conditional refs, child elements